[package]
name = "inmor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
josekit = "0.10.1"
redis = { version = "0.30.0",  features = ["tokio-comp", "connection-manager"] }
serde = "1.0.219"
serde_json = "1.0.140"
env_logger = "*"
config = "0.15.11"
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
