[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyinmor"
authors = [{name = "Kushal Das", email = "kushal@sunet.se"}]
dynamic = ["version", "description"]
license = { file="LICENSE" }

dependencies = [
	"jwcrypto",
	"httpx",
	"redis"
]

[project.urls]
Home = "https://github.com/kushaldas/pyinmor"

[tool.pyright]

stubPath = "typings"
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportExplicitAny = false
