[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyinmor"
authors = [{name = "Kushal Das", email = "kushal@sunet.se"}]
dynamic = ["version", "description"]
license = { file="LICENSE" }

dependencies = [
	"jwcrypto",
	"httpx",
	"redis"
]

[project.urls]
Home = "https://github.com/kushaldas/pyinmor"

[tool.pyright]
stubPath = "typings"
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportExplicitAny = false

[tool.ruff]
line-length = 100
exclude = [
    "db",
    "redis",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ty.src]
exclude = [
    "db",
]
